--- a/ui/components/forms/flavors/form-element/index.scss
+++ b/ui/components/forms/flavors/form-element/index.scss
@@ -66,4 +66,18 @@
     margin-top: $spacing-x-small;
     display: block;
   }
+
+  // Read Only
+  &__static {
+    display: inline-block;
+    line-height: $line-height-button;
+    min-height: calc(#{$line-height-button} + 2px); /* Note: for IE */
+
+    // If read only state is longform
+    // Apply text line height
+    &.#{$css-prefix}text-longform {
+      line-height: $line-height-text;
+      padding-bottom: calc((#{$line-height-text} * #{$font-size-medium}) - #{$font-size-medium}); // Re-establish vertical baseline
+    }
+  }
 }
